install spoke cluster
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/br-testing-automation/env.properties
+++ b/br-testing-automation/env.properties
@@ -23,6 +23,10 @@ LICENSING_NAMESPACE="ibm-licensing"
 LSR_NAMESPACE="ibm-lsr"
 CPFS_VERSION="4.8"
 ZENSERVICE_NAME="test-zen"
+HUB_OC_TOKEN=
+HUB_SERVER=
+SPOKE_OC_TOKEN=
+SPOKE_SERVER=
 
 #label-common-services specific env variables
 # Change to 1 to enable private catalog
