add lsr resources to backup
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
@@ -515,6 +515,7 @@ spec:
         - hook: lsr-data/backup
         - group: lsr-volume
         - group: license-service-reporter-parent
+        - group: license-service-reporter-resources
         - hook: zen5-data/backup
         - group: cpfs-util-volume
         - group: zenservice
