--- a/br-testing-automation/env.properties
+++ b/br-testing-automation/env.properties
@@ -1,33 +1,31 @@
-CATALOG_SOURCE="ibm-operator-catalog-latest"
-CAT_SRC_NS="openshift-marketplace"
-OC="oc"
-YQ="yq"
-SF_NAMESPACE="ibm-spectrum-fusion-ns"
-BR_SERVICE_NAMESPACE="ibm-backup-restore"
-OPERATOR_NS="cs-op"
-SERVICES_NS="cs-serv"
-TETHERED_NAMESPACE1="cs-ten1"
-TETHERED_NAMESPACE2="cs-ten2"
-GITHUB_USER=
-GITHUB_TOKEN=
-DOCKER_USER=
-DOCKER_PASS=
-STORAGE_CLASS="rook-cephfs"
-BACKUP_STORAGE_LOCATION_NAME="luztest"
-STORAGE_BUCKET_NAME="luztest-bucket"
-S3_URL="https\:\/\/s3.us-south.cloud-object-storage.appdomain.cloud"
-STORAGE_SECRET_ACCESS_KEY=
-STORAGE_SECRET_ACCESS_KEY_ID=
-CERT_MANAGER_NAMESPACE="ibm-cert-manager"
-LICENSING_NAMESPACE="ibm-licensing"
-LSR_NAMESPACE="ibm-lsr"
-CPFS_VERSION="4.8"
-ZENSERVICE_NAME="test-zen"
-HUB_OC_TOKEN=
-HUB_SERVER=
-SPOKE_OC_TOKEN=
-SPOKE_SERVER=
+#variables for both hub and spoke setup
+CATALOG_SOURCE="ibm-operator-catalog" #default
+CAT_SRC_NS="openshift-marketplace" #default
+OC="oc" #default, can be overridden with --oc option when calling script
+YQ="yq" #default, can be overridden with --yq option when calling script
+SF_NAMESPACE="ibm-spectrum-fusion-ns" #default
+BR_SERVICE_NAMESPACE="ibm-backup-restore" #default
+GITHUB_USER= #requires access to https://github.ibm.com/ProjectAbell/cmd-line-install repo
+GITHUB_TOKEN= #requires access to https://github.ibm.com/ProjectAbell/cmd-line-install repo
+STORAGE_CLASS=""
 
+#variables for just hub setup
+OPERATOR_NS="" 
+SERVICES_NS=""
+TETHERED_NAMESPACE1="" #script assumes two tenant namespaces
+TETHERED_NAMESPACE2=""
+DOCKER_USER= #not currently used but listed as a prereq for some of the Fusion scripts so included for now
+DOCKER_PASS=
+BACKUP_STORAGE_LOCATION_NAME="" #name of s3 storage
+STORAGE_BUCKET_NAME="" #name of existing s3 bucket
+S3_URL="https\:\/\/<the rest of the url>" #make sure to escape `/` and `:`
+STORAGE_SECRET_ACCESS_KEY= #secret access key from s3 storage
+STORAGE_SECRET_ACCESS_KEY_ID= #access key id from s3 storage
+CERT_MANAGER_NAMESPACE="ibm-cert-manager" #default
+LICENSING_NAMESPACE="ibm-licensing" #defaul
+LSR_NAMESPACE="ibm-lsr" #default
+CPFS_VERSION="4.8" #default
+ZENSERVICE_NAME="" #the name of the deployed zenservice, script assumes at least one is deployed
 #label-common-services specific env variables
 # Change to 1 to enable private catalog
 ENABLE_PRIVATE_CATALOG=0
@@ -36,3 +34,10 @@ ENABLE_PRIVATE_CATALOG=0
 # For example: "my-catalog,my-catalog2,my-catalog3"
 ADDITIONAL_SOURCES="" 
 CONTROL_NS="" # Pass the control namespace if it is needed to be backed up
+
+#variables for just spoke setup
+#these values can be found by copying the login token and server values for an openshift cluster
+HUB_OC_TOKEN=
+HUB_SERVER=
+SPOKE_OC_TOKEN=
+SPOKE_SERVER=
