--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -396,6 +396,8 @@ spec:
                         ephemeral-storage: 256Mi
                         memory: 200Mi
                     securityContext:
+                      seccompProfile:
+                        type: RuntimeDefault
                       allowPrivilegeEscalation: false
                       capabilities:
                         drop:
