Automate setup of Hub and Spoke clusters for backup and restore using Spectrum Fusion (#2142)
* initialize backup env setup script. Add sc validation and sf br service install

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* make executable

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add ability to apply SF resources

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* change file copy

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* debug applying secret

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* remove templates dir

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* need encoded

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add CPFS resource labeling and deployment

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* test without changing directory

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update deploy br resources script name

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add base dir for use outside of velero dir

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* include lsr

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* change json path to yq due to inconsistent results

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update application and recipe yamls

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update lsr recipe

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update zen br, remove unused cm items

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update cert manager resource def

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* install spoke cluster

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* apply spoke yaml

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* remove newline character from secret encoding

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* remove newline character

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add wait logic for spoek clus

--- a/velero/spectrum-fusion/cpfs-util-resources/setup-tenant-job.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/setup-tenant-job.yaml
@@ -16,7 +16,7 @@ spec:
       suspend: true
       restartPolicy: OnFailure
       containers:
-      - command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace <operator namespace> --services-namespace <services namespace> --tethered-namespaces <comma delimited (no spaces) list of Cloud Pak workload namespaces that use this foundational services instance> --license-accept -c v<foundational services version number in use i.e. 4.0, 4.1, 4.2, etc> -p <.spec.size value from commonservice cr> -i <install mode, either Manual or Automatic>"]
+      - command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace <operator namespace> --services-namespace <services namespace> --tethered-namespaces <comma delimited (no spaces) list of Cloud Pak workload namespaces that use this foundational services instance> --license-accept -c v<foundational services version number in use i.e. 4.0, 4.1, 4.2, etc> -p <.spec.size value from commonservice cr> -i <install mode, either Manual or Automatic> -s <catalog source name> -n <catalog source namespace>"]
         image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0
         imagePullPolicy: IfNotPresent
         name: cpfs-util
@@ -24,7 +24,7 @@ spec:
           limits:
             cpu: 500m
             ephemeral-storage: 512Mi
-            memory: 1024Mi
+            memory: 1536Mi
           requests:
             cpu: 200m
             ephemeral-storage: 128Mi
