--- a/velero/schedule/schedule-common-services.yaml
+++ b/velero/schedule/schedule-common-services.yaml
@@ -43,3 +43,4 @@ spec:
         - cs-db #velero plugin approach to BR IM EDB data
         - keycloak-data #pgdump approach to BR keycloak data
         - keycloak #velero plugin approach to BR keycloak data
+        - user-mgmt #non-data user-management operator resources
