--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -1388,6 +1388,8 @@ rules:
       - zenextensions
       - zenextension/status
       - zenextensions/status
+      - zenextension/finalizer
+      - zenextensions/finalizer
   - verbs:
       - get
       - list
