create v2 recipe, update label script accordingly
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/backup/common-service/env.properties
+++ b/velero/backup/common-service/env.properties
@@ -6,6 +6,9 @@ OPERATOR_NS="" # Pass the namespace where the cs operator is installed
 SERVICES_NS="" 
 CONTROL_NS="" # Pass the control namespace if it is needed to be backed up
 
+#Pass any additional namespaces in the tenant that are not the operator or services namespace. Comma delimited
+TETHERED_NS=""
+
 # Change to the namespace where cert-manager, licensing and LSR are installed
 CERT_MANAGER_NAMESPACE="ibm-cert-manager" 
 LICENSING_NAMESPACE="ibm-licensing"
