remove namespace designation
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/4.9-example-multi-ns-recipev2.yaml
+++ b/velero/spectrum-fusion/recipes/4.9-example-multi-ns-recipev2.yaml
@@ -111,17 +111,13 @@ spec:
       name: common-services-catalogs
       type: resource
       backupRef: backup-parent-group
-    - includedNamespaces:
-        - openshift-config
-      includedResourceTypes:
+    - includedResourceTypes:
         - secrets
       labelSelector: foundationservices.cloudpak.ibm.com=pull-secret
       name: pull-secret
       type: resource
       backupRef: backup-parent-group
     - backupRef: backup-parent-group
-      includedNamespaces:
-        - openshift-config
       includedResourceTypes:
         - secrets
       labelSelector: foundationservices.cloudpak.ibm.com=pull-secret
