update script usage
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/br-testing-automation/env.properties
+++ b/br-testing-automation/env.properties
@@ -41,3 +41,13 @@ HUB_OC_TOKEN=
 HUB_SERVER=
 SPOKE_OC_TOKEN=
 SPOKE_SERVER=
+
+# ==============================================================================
+# variables for auto-br script
+TARGET_CLUSTER=""  # cluster name
+TARGET_CLUSTER_TYPE="" # either 'spoke' or 'hub'
+APPLICATION="cs-application" 
+BACKUP_POLICY="cs-backup-policy"
+SF_NAMESPACE="ibm-spectrum-fusion-ns"
+BACKUP_NAME="" # if --backup is enabled, this is necessary
+RESTORE_NAME="" # if --restore is enabled, this is necessary
