--- a/cp3-networkpolicy/egress/zen/zen-egress-zen-watchdog-create-tables-job.yaml
+++ b/cp3-networkpolicy/egress/zen/zen-egress-zen-watchdog-create-tables-job.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   labels:
-    component: cpfs
+    component: cpfs3
   name: egress-zen-watchdog-create-tables-job
   namespace: "zenNamespace"
 spec:
