use plural in resource type
Co-authored-by: YuChen Shen <59578388+YCShen1010@users.noreply.github.com>

--- a/velero/spectrum-fusion/recipes/mcsp-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/mcsp-example-recipe-multi-ns.yaml
@@ -88,7 +88,7 @@ spec:
       name: pull-secret
       type: resource
     - includedResourceTypes:
-        - secret
+        - secrets
       labelSelector: foundationservices.cloudpak.ibm.com=user-mgmt
       name: user-mgmt-secret
       type: resource
