use plural in type
Co-authored-by: YuChen Shen <59578388+YCShen1010@users.noreply.github.com>

--- a/velero/spectrum-fusion/recipes/mcsp-example-recipe-single-ns.yaml
+++ b/velero/spectrum-fusion/recipes/mcsp-example-recipe-single-ns.yaml
@@ -97,7 +97,7 @@ spec:
       restoreOverwriteResources: true
       type: resource
     - includedResourceTypes:
-        - secret
+        - secrets
       labelSelector: foundationservices.cloudpak.ibm.com=user-mgmt
       name: user-mgmt-secret
       type: resource
