Automate running backups and restores w/ fusion (#2157)
* initialize backup env setup script. Add sc validation and sf br service install

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* make executable

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add ability to apply SF resources

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* change file copy

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* debug applying secret

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* remove templates dir

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* need encoded

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add CPFS resource labeling and deployment

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* test without changing directory

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update deploy br resources script name

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add base dir for use outside of velero dir

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* include lsr

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* change json path to yq due to inconsistent results

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update application and recipe yamls

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update lsr recipe

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update zen br, remove unused cm items

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update cert manager resource def

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* install spoke cluster

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* apply spoke yaml

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* remove newline character from secret encoding

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* remove newline character

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add wait logic for spoek cluster install

Signed-off-by: Ben Luzarr

--- a/br-testing-automation/env.properties
+++ b/br-testing-automation/env.properties
@@ -24,7 +24,7 @@ STORAGE_SECRET_ACCESS_KEY_ID= #access key id from s3 storage
 CERT_MANAGER_NAMESPACE="ibm-cert-manager" #default
 LICENSING_NAMESPACE="ibm-licensing" #defaul
 LSR_NAMESPACE="ibm-lsr" #default
-CPFS_VERSION="4.8" #default
+CPFS_VERSION="4.9" #default
 ZENSERVICE_NAME="" #the name of the deployed zenservice, script assumes at least one is deployed
 #label-common-services specific env variables
 # Change to 1 to enable private catalog
@@ -41,3 +41,13 @@ HUB_OC_TOKEN=
 HUB_SERVER=
 SPOKE_OC_TOKEN=
 SPOKE_SERVER=
+
+# ==============================================================================
+# variables for auto-br script
+TARGET_CLUSTER=""  # cluster name
+TARGET_CLUSTER_TYPE="" # either 'spoke' or 'hub'
+APPLICATION="cs-application" 
+BACKUP_POLICY="cs-backup-policy"
+SF_NAMESPACE="ibm-spectrum-fusion-ns"
+BACKUP_NAME="" # if --backup is enabled, this is necessary
+RESTORE_NAME="" # if --restore is enabled, this is necessary
