add fusion-catalogsource and cs-catalogsource
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/br-testing-automation/env.properties
+++ b/br-testing-automation/env.properties
@@ -1,5 +1,6 @@
 #variables for both hub and spoke setup
-CATALOG_SOURCE="ibm-operator-catalog" #default
+FUSION_CATALOG_SOURCE="ibm-operator-catalog" #default
+CS_CATALOG_SOURCE="opencloud-operators"
 CAT_SRC_NS="openshift-marketplace" #default
 OC="oc" #default, can be overridden with --oc option when calling script
 YQ="yq" #default, can be overridden with --yq option when calling script
