initial commit to add job files, update label common service
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/backup/common-service/env.properties
+++ b/velero/backup/common-service/env.properties
@@ -14,6 +14,11 @@ CERT_MANAGER_NAMESPACE="ibm-cert-manager"
 LICENSING_NAMESPACE="ibm-licensing"
 LSR_NAMESPACE="ibm-lsr"
 
+# enable labeling of cert manager, licensing, and LSR resources by changing value to 1
+ENABLE_CERT_MANAGER=0
+ENABLE_LICENSING=0
+ENABLE_LSR=0
+
 # Change to 1 to enable private catalog
 ENABLE_PRIVATE_CATALOG=0
 
