update env files and usage for new parameter
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/backup/common-service/env.properties
+++ b/velero/backup/common-service/env.properties
@@ -22,6 +22,9 @@ ENABLE_LSR=0
 # Change to 1 to enable private catalog
 ENABLE_PRIVATE_CATALOG=0
 
+#change to 1 to label catalog sources in openshift-marketplace
+ENABLE_DEFAULT_CS=0
+
 # Add additional CatalogSources separated by comma which are withour ".spec.publisher: IBM"
 # For example: "my-catalog,my-catalog2,my-catalog3"
 ADDITIONAL_SOURCES="" 
