update SA names
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/backup/cert-manager/label-cert-manager-job.yaml
+++ b/velero/backup/cert-manager/label-cert-manager-job.yaml
@@ -38,8 +38,8 @@ spec:
       schedulerName: default-scheduler
       securityContext:
         runAsNonRoot: true
-      serviceAccount: label-cert-manager-job-sa
-      serviceAccountName: label-cert-manager-job-sa
+      serviceAccount: label-cert-manager-job
+      serviceAccountName: label-cert-manager-job
       terminationGracePeriodSeconds: 30
       volumes:
       - emptyDir: {}
