test label common services
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/backup/cert-manager/test-configmap.yaml
+++ b/velero/backup/cert-manager/test-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: label-cert-manager-job
-  namespace: <>
+  namespace: <operator namespace>
 data:
   label-cert-manager.sh: |
     ##!/usr/bin/env bash
