--- a/velero/backup/common-service/test-configmap.yaml
+++ b/velero/backup/common-service/test-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: label-bedrock-job
-  namespace: <>
+  namespace: <operator namespace>
 data:
   label-common-service.sh: |
     #!/usr/bin/env bash
