Fix fusion script/recipe issue found in SERT testing (#2217)
* export TETHERED_NS for label-cs script

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* typo

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* remove operandconfig from recipe

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* add fusion-catalogsource and cs-catalogsource

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update namespace

Signed-off-by: Allen Li <liyuchen223@gmail.com>

---------

Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
@@ -178,14 +178,12 @@ spec:
       type: resource
     - includedResourceTypes:
         - operandrequests.operator.ibm.com
-        - operandconfigs.operator.ibm.com
       labelSelector: foundationservices.cloudpak.ibm.com=operand
       name: odlm-resources
       type: resource
     - backupRef: odlm-resources
       includedResourceTypes:
         - operandrequests.operator.ibm.com
-        - operandconfigs.operator.ibm.com
       labelSelector: foundationservices.cloudpak.ibm.com=operand
       name: operand-resources
       restoreOverwriteResources: true
@@ -402,7 +400,7 @@ spec:
           timeout: 600
       labelSelector: foundationservices.cloudpak.ibm.com=setup-tenant-job
       name: setup-tenant-job-check
-      namespace: cs-op
+      namespace: <operator namespace>
       onError: fail
       selectResource: pod
       timeout: 600
