add namespaces to the role
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/backup/common-service/label-bedrock-role.yaml
+++ b/velero/backup/common-service/label-bedrock-role.yaml
@@ -17,6 +17,7 @@ rules:
       - operators.coreos.com
       - operator.ibm.com 
     resources:
+      - namespaces
       - zenservices
       - configmaps
       - catalogsources
