--- a/velero/backup/common-service/label-bedrock-rolebinding.yaml
+++ b/velero/backup/common-service/label-bedrock-rolebinding.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: label-bedrock-job
+  namespace: <every namespace in the tenant>
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
