--- a/velero/backup/common-service/label-bedrock-role.yaml
+++ b/velero/backup/common-service/label-bedrock-role.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: label-bedrock-job
+  namespace: <every namespace in the tenant>
 rules:
   - verbs:
       - get
