--- a/velero/backup/common-service/env.properties
+++ b/velero/backup/common-service/env.properties
@@ -14,8 +14,16 @@ CERT_MANAGER_NAMESPACE="ibm-cert-manager"
 LICENSING_NAMESPACE="ibm-licensing"
 LSR_NAMESPACE="ibm-lsr"
 
+# enable labeling of cert manager, licensing, and LSR resources by changing value to 1
+ENABLE_CERT_MANAGER=0
+ENABLE_LICENSING=0
+ENABLE_LSR=0
+
 # Change to 1 to enable private catalog
 ENABLE_PRIVATE_CATALOG=0
+
+#change to 1 to label catalog sources in openshift-marketplace
+ENABLE_DEFAULT_CS=0
 
 # Add additional CatalogSources separated by comma which are withour ".spec.publisher: IBM"
 # For example: "my-catalog,my-catalog2,my-catalog3"
